
2002-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
	
	* ports.c (scm_new_port_table_entry): change function from
	scm_add_to_port_table. This prevents cells with null-pointers from
	being exposed to GC.

	* vports.c (s_scm_make_soft_port) strports.c (scm_mkstrport),
	fports.c (scm_fdes_to_port): Use scm_new_port_table_entry().

	* gc.c (s_scm_gc_stats): add cell-yield and malloc-yield statistic
	to gc-stats.

	* numbers.c (big2str): return "0" for 0 iso. ""

        * gc-segment.c, gc-malloc.c gc-mark.c, gc-freelist.c, gc-card.c,
	private-gc.h: new file

        * gc.c: completely revised and cleaned up the GC. It now uses lazy
        sweeping. More documentation in workbook/newgc.text

2002-07-25  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* random.c (rstate_free): Return zero.

2002-07-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* environments.c (remove_key_from_alist):  Removed.

	(obarray_remove):  Simplified.

2002-07-24  Stefan Jahn  <stefan@lkcc.org>

	* continuations.h: ia64: Include <signal.h> before 
	<sys/ucontext.h>.

2002-07-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* modules.c (scm_sym2var):  Don't compare SCM values with ==.

2002-07-21  Han-Wen  <hanwen@cs.uu.nl>

	* goops.c (scm_compute_applicable_methods): use
	scm_remember_upto_here_1 iso scm_remember_upto_here

	* macros.c: include deprecation.h

	* vectors.c (s_scm_vector_move_right_x): remove side effect in
	macro arg.
	(s_scm_vector_move_left_x): idem.

	* net_db.c, posix.c, socket.c: variable naming: change ans to
	result.

	* sort.c (scm_merge_vector_x): accept vector as argument
	iso. SCM*. This is needed for full GC correctness.

	* gc.h: undo previous undocumented changes related to #ifdef
	GENGC.

2002-07-20  Han-Wen  <hanwen@cs.uu.nl>

	* *.c: add space after commas everywhere.

	* *.c: use SCM_VECTOR_SET everywhere, where a vector is written.
	Document cases where SCM_WRITABLE_VELTS() is used.
	
	* vectors.h (SCM_VELTS): prepare for write barrier, and let