@@ -1,5 +1,7 @@
+2002-08-04  Han-Wen  <hanwen@cs.uu.nl>
 
-2002-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+	* ports.c (scm_new_port_table_entry): init port entry to 0
+	completely.
 	
 	* ports.c (scm_new_port_table_entry): change function from
 	scm_add_to_port_table. This prevents cells with null-pointers from
